--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.16.0",
-    "@types/node": "^10.3.5"
+    "@types/node": "^10.3.5",
+    "nodemon": "^1.19.2"
   }
 }
